# INT8-CIM-of-jiao

./: .gitignore  CLAUDE.md  FINAL_FIX_REPORT.md  OPTIMIZATION_ROADMAP.md  README.md  clean_onlycode.sh  fix_kv260_sdcard.sh  project_cim.md  prompt.txt  prompt_C3.txt  tt.sh  vivado_108419.backup.jou  vivado_781094.backup.jou
.pyre/: pyre.stderr
sw/: README.md  benchmark_e2e_60mhz_dma.csv  benchmark_e2e_60mhz_mmio.csv  benchmark_lenet5_20260410.csv  benchmark_lenet5_55mhz.csv  benchmark_lenet5_55mhz_checkpoint3_c3.csv  benchmark_lenet5_60mhz_checkpoint3_c3.csv  benchmark_lenet5_70mhz_checkpoint3_c3.csv  cim_driver.py  debug_mmio.py  dma_optimize.csv  dma_profiler_test.ipynb  full_cim_test_fixed.ipynb  full_cim_test_pynq.ipynb  generate_lenet5_data.py  generate_mnist_data.ipynb  generate_universal_data.ipynb  golden_model.py  golden_model_torch.py  inference.sh  lenet5_quantize.py  lenet5_test_pynq.ipynb  lenet5_test_pynq_multifreq.ipynb  mnist_quantize.py  mnist_real_test_pynq.ipynb  model_zoo.py  picorv32_mlp_pc_no_pyserial.ipynb  picorv32_mlp_pynq_no_pyserial.ipynb  picorv32_small_mlp_pynq.ipynb  picorv32_small_mlp_pynq_host_uart_serial.ipynb  prepare_picorv32_env.ipynb  pynq_test.ipynb  pynq_verify_rv32.ipynb  pyproject.toml  test_on_board.sh  universal_model_test_pynq.ipynb
sw/.pyre/: pyre.stderr
sw/scripts/: benchmark_e2e.py  benchmark_rv32.py  benchmark_sw_baseline.py  dma_latency_report.py  plot_latency_breakdown.py  set_up.sh  sim_fusion_fsm.py  test_fusion.py
sw/src/sw/: __init__.py
sw/tests/: test_cim_driver_offline.py  test_golden_model.py
(+426 files in other folders)
