[project]
name = "sw"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Invoker-pray", email = "jiaohongbao04@gmail.com" }
]
dependencies = [
    "jupyter>=1.1.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "torchaudio>=2.10.0",
    "pyserial>=3.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sw"]
